--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
     <!-- Meta Tags -->
     <meta charset="utf-8">
-    <meta name="description" content="Lazord is a responsive creative portfolio template.">
-    <meta name="keywords" content="portfolio, personal, corporate, business, parallax, creative, agency">
+    <meta name="description" content="My Name is Mostafa im Back-end Developer and this my Portfolio">
+    <meta name="keywords" content="portfolio, Back End , Laravel,PHP">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Title -->
