--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
           whatsapp: "+20122 775 9022", // WhatsApp number
           call_to_action: "Message Me", // Call to action
           button_color: "#7cb33d", // Color of button
-          position: "right", // Position may be 'right' or 'left'
+          position: "left", // Position may be 'right' or 'left'
           order: "whatsapp", // Order of buttons
         };
         var proto = document.location.protocol, host = "whatshelp.io", url = proto + "//static." + host;
