--- a/index.html
+++ b/index.html
@@ -351,7 +351,45 @@
     <section class="about section-padding " data-scroll-index="4" style="background: #f5f5f5">
       <div class="container">
 
-        {
+          <div class="section-head wow zoomIn text-center" data-wow-offset="200">
+          <h3>Skills</h3>
+          <div class="row">
+            <div class="col-lg-6 col-md-8 mx-auto">
+              <p>Its My Skill look for more learning and i gona do my best  no one know everything </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row " align="center">
+
+          <!-- Skills -->
+          <div class="col-lg-6 ">
+            <div class="intro mb-md-50 wow fadeInLeft">
+              <p>
+              <h5 style="color: #7cb342">BACK-END</h5><br>
+              •	PHP (7)<br><br>
+              •	Laravel (5.4  : 5.8)<br><br>
+              •	Using OOP<br><br>
+              •	MYSQL<br><br>
+              •	Using Laravel Eloquent ORM<br><br>
+              •	Using 3 databases.<br><br>
+              •	Good looking and Fixed the Errors.<br><br>
+              •	Clean code.<br><br>
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-6 ">
+            <div class="intro mb-md-50 wow fadeInRight">
+              <p>
+              <h5 style="color: #7cb342">FRONT-END</h5><br>
+              •	HTML<br><br>
+              •	Css<br><br>
+              •	Bootstrap<br><br>
+              •	JavaScript<br><br>
+              •	Vue.js<br><br>
+              </p>
+            </div>
+          </div>
 
 
         </div><!-- /row -->
