--- a/index.html
+++ b/index.html
@@ -347,11 +347,12 @@
     </section>
     <!-- ===== End Testimonials ===== -->
 
-    <!-- ===== Start Blog ===== -->
+     <!-- ===== Start Blog ===== -->
     <section class="about section-padding " data-scroll-index="4" style="background: #f5f5f5">
       <div class="container">
 
-          <div class="section-head wow zoomIn text-center" data-wow-offset="200">
+        <!-- Section Heading  -->
+        <div class="section-head wow zoomIn text-center" data-wow-offset="200">
           <h3>Skills</h3>
           <div class="row">
             <div class="col-lg-6 col-md-8 mx-auto">
@@ -389,6 +390,8 @@
               •	Vue.js<br><br>
               </p>
             </div>
+          </div>
+
           </div>
 
 
