--- a/index.html
+++ b/index.html
@@ -287,7 +287,26 @@
                   </a>
                 </div>
               </div>
+<!-- Gallery Item -->
+          <div class="col-lg-4 col-md-6 item brand">
+            <div class="item-img mb-md-30 mb-sm-50 wow fadeInLeft" data-wow-offset="200">
 
+              <img src="img/portfolio/4.png" alt="Image" />
+
+              <div class="top-overlay"></div>
+              <div class="bottom-overlay"></div>
+
+              <div class="overlay-info v-middle">
+                <h5 class="sub-heading">•Master Service For Banking Service <br> Back-end Development <br> Admin Panel</h5>
+                <div class="icons">
+                  <a href="https://dr-ayoub.000webhostapp.com/">
+                    <span class="icon"><i class="fas fa-link"></i></span>
+                  </a>
+                  <a href="img/portfolio/4.png" class="popup-img">
+                    <span class="icon"><i class="fas fa-search"></i></span>
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
 
