--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
               <div class="bottom-overlay"></div>
 
               <div class="overlay-info v-middle">
-                <h5 class="sub-heading">•Master Service For Banking Service <br> Back-end Development <br> Admin Panel</h5>
+                <h5 class="sub-heading">•Dr M-Ayoub Obesity Surgery <br> Back-end Development <br> Admin Panel</h5>
                 <div class="icons">
                   <a href="https://dr-ayoub.000webhostapp.com/">
                     <span class="icon"><i class="fas fa-link"></i></span>
