--- a/index.html
+++ b/index.html
@@ -546,12 +546,12 @@
 
       (function () {
         var options = {
-          facebook: "525377188263738", // Facebook page ID
+          
           whatsapp: "+20122 775 9022", // WhatsApp number
           call_to_action: "Message Me", // Call to action
           button_color: "#7cb33d", // Color of button
           position: "left", // Position may be 'right' or 'left'
-          order: "facebook,whatsapp", // Order of buttons
+          order: "whatsapp", // Order of buttons
         };
         var proto = document.location.protocol, host = "whatshelp.io", url = proto + "//static." + host;
         var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
