--- a/index.html
+++ b/index.html
@@ -72,17 +72,20 @@
             <li class="nav-item">
               <a class="nav-link" href="#" data-scroll-nav="1">About</a>
             </li>
+             <li class="nav-item">
+                    <a class="nav-link" href="#" data-scroll-nav="2">Experience</a>
+                </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" data-scroll-nav="2">Portfolio</a>
+              <a class="nav-link" href="#" data-scroll-nav="3">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" data-scroll-nav="3">Courses</a>
+              <a class="nav-link" href="#" data-scroll-nav="4">Courses</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" data-scroll-nav="4">Skills</a>
+              <a class="nav-link" href="#" data-scroll-nav="5">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" data-scroll-nav="5">Contact</a>
+              <a class="nav-link" href="#" data-scroll-nav="6">Contact</a>
             </li>
           </ul>
 
@@ -183,21 +186,38 @@
 
 
 
-    <!-- ===== Start Counter ===== -->
-    <div class="counter bg-prop section-overlay dark text-center">
-      <div class="container">
+  <!-- ===== Start Counter ===== -->
+<div class="counter bg-prop section-overlay dark text-center" data-scroll-index="2">
+    <div class="container">
 
-        <div class="row">
+        <div class="section-head wow zoomIn" data-wow-offset="200">
+            <h3 style="color: white">Experience</h3>
+            <div class="row" style="color: white">
+                <div class="col-lg-6 col-md-8 mx-auto">
+                    <p style="color: white">
+                        • From 1/2019 to Present.<br>
+                        Back-End Developer( Laravel Framework ) at Be Group
+                    </p>
+                    <br>
+                    <p style="color: white">
+                        • From 10/2018 to 1/2019<br>
+                        PHP developer Training at Be group.
+                    </p>
+                    <br>
+                    <p style="color: white">•	From 1/2015 to 7/2015<br>
+                        ADF developer ( Java ) AT Smart Development
+                    </p>
+                </div>
+            </div>
+        </div>
 
 
-
-        </div><!-- /row -->
-      </div><!-- /container -->
-    </div>
-    <!-- ===== End Counter ===== -->
+    </div><!-- /container -->
+</div>
+<!-- ===== End Counter ===== -->
 
     <!-- ===== Start Portfolio ===== -->
-    <section class="portfolio section-padding text-center" data-scroll-index="2">
+    <section class="portfolio section-padding text-center" data-scroll-index="3">
       <div class="container">
 
         <!-- Section Heading  -->
@@ -321,7 +341,7 @@
     <!-- ===== End Portfolio ===== -->
 
     <!-- ===== Start Testimonials ===== -->
-    <section class="testimonials section-padding bg-prop section-overlay dark text-center" data-scroll-index="3">
+    <section class="testimonials section-padding bg-prop section-overlay dark text-center" data-scroll-index="4">
       <div class="container">
         <!-- Section Heading  -->
         <div class="section-head wow zoomIn" data-wow-offset="200">
@@ -370,7 +390,7 @@
     <!-- ===== End Testimonials ===== -->
 
      <!-- ===== Start Blog ===== -->
-    <section class="about section-padding " data-scroll-index="4" style="background: #f5f5f5">
+    <section class="about section-padding " data-scroll-index="5" style="background: #f5f5f5">
       <div class="container">
 
         <!-- Section Heading  -->
@@ -423,7 +443,7 @@
     <!-- ===== End Blog ===== -->
 
     <!-- ===== Start Contact ===== -->
-    <section class="contact text-center" data-scroll-index="5">
+    <section class="contact text-center" data-scroll-index="6">
       <div class="container">
 
         <!-- Section Heading  -->
