--- a/index.html
+++ b/index.html
@@ -194,8 +194,13 @@
             <h3 style="color: white">Experience</h3>
             <div class="row" style="color: white">
                 <div class="col-lg-6 col-md-8 mx-auto">
+<p style="color: white">
+                        • From 9/2019 to present<br>
+                        Back-End Developer( Laravel Framework ) at Multi-Mega
+                    </p>
+                    <br>
                     <p style="color: white">
-                        • From 1/2019 to Present.<br>
+                        • From 1/2019 to 9/2019<br>
                         Back-End Developer( Laravel Framework ) at Be Group
                     </p>
                     <br>
