--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
         <!-- Filter Links -->
         <div class="filtering">
           <span data-filter='*' class="active">All</span>
-          <span data-filter='.brand'>Web Development</span>
-          <span data-filter='.graphic'>Web Design</span>
+          <span data-filter='.brand'>Be Group</span>
+          <span data-filter='.graphic'>Multi-Mega</span>
         </div>
 
         <!-- Gallery -->
@@ -337,7 +337,50 @@
               </div>
             </div>
           </div>
+<!-- Gallery Item -->
+          <div class="col-lg-4 col-md-6 item graphic">
+            <div class="item-img mb-md-30 mb-sm-50 wow fadeInLeft" data-wow-offset="200">
 
+              <img src="img/portfolio/4.png" alt="Image" />
+
+              <div class="top-overlay"></div>
+              <div class="bottom-overlay"></div>
+
+              <div class="overlay-info v-middle">
+                <h5 class="sub-heading">•ERP <br> Back-end Development <br> Admin Panel</h5>
+                <div class="icons">
+                  <a href="http://mmgulf.com/september19/erb/public/">
+                    <span class="icon"><i class="fas fa-link"></i></span>
+                  </a>
+                  <a href="img/portfolio/5.png" class="popup-img">
+                    <span class="icon"><i class="fas fa-search"></i></span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+<!-- Gallery Item -->
+          <div class="col-lg-4 col-md-6 item graphic">
+            <div class="item-img mb-md-30 mb-sm-50 wow fadeInLeft" data-wow-offset="200">
+
+              <img src="img/portfolio/4.png" alt="Image" />
+
+              <div class="top-overlay"></div>
+              <div class="bottom-overlay"></div>
+
+              <div class="overlay-info v-middle">
+                <h5 class="sub-heading">•Al-adl <br> Back-end Development <br> Admin Panel</h5>
+                <div class="icons">
+                  <a href="">
+                    <span class="icon"><i class="fas fa-link"></i></span>
+                  </a>
+                  <a href="img/portfolio/6.png" class="popup-img">
+                    <span class="icon"><i class="fas fa-search"></i></span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
 
 
         </div><!-- /gallery -->
