--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
           </div>
 
 <!-- Gallery Item -->
-          <div class="col-lg-4 col-md-6 item brand">
+          <div class="col-lg-4 col-md-6 item brand" style="padding-top: 28px">
             <div class="item-img mb-md-30 mb-sm-50 wow fadeInLeft" data-wow-offset="200">
 
               <img src="img/portfolio/4.png" alt="Image" />
