--- a/index.html
+++ b/index.html
@@ -381,6 +381,28 @@
               </div>
             </div>
           </div>
+<!-- Gallery Item -->
+          <div class="col-lg-4 col-md-6 item graphic">
+            <div class="item-img mb-md-30 mb-sm-50 wow fadeInLeft" data-wow-offset="200">
+
+              <img src="img/portfolio/7.png" alt="Image" />
+
+              <div class="top-overlay"></div>
+              <div class="bottom-overlay"></div>
+
+              <div class="overlay-info v-middle">
+                <h5 class="sub-heading">•Broxlive <br> Back-end Development <br> Admin Panel</h5>
+                <div class="icons">
+                  <a href="http://mmgulf.com/september19/broxlive/broxlive/public/">
+                    <span class="icon"><i class="fas fa-link"></i></span>
+                  </a>
+                  <a href="img/portfolio/7.png" class="popup-img">
+                    <span class="icon"><i class="fas fa-search"></i></span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
 
 
         </div><!-- /gallery -->
