--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="My Name is Mostafa im Back-end Developer and this my Portfolio">
     <meta name="keywords" content="portfolio, Back End , Laravel,PHP">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:image" content="/img/me.jpg"/>
 
     <!-- Title -->
     <title>Mostafa Hamdi</title>
