--- a/index.html
+++ b/index.html
@@ -405,7 +405,28 @@
               </div>
             </div>
           </div>
+<!-- Gallery Item -->
+          <div class="col-lg-4 col-md-6 item graphic">
+            <div class="item-img mb-md-30 mb-sm-50 wow fadeInLeft" data-wow-offset="200">
 
+              <img src="img/portfolio/8.png" alt="Image" />
+
+              <div class="top-overlay"></div>
+              <div class="bottom-overlay"></div>
+
+              <div class="overlay-info v-middle">
+                <h5 class="sub-heading">• Eyez <br> Back-end Development </h5>
+                <div class="icons">
+                  <a href="http://mmgulf.com/november19/eyez/demo/">
+                    <span class="icon"><i class="fas fa-link"></i></span>
+                  </a>
+                  <a href="img/portfolio/8.png" class="popup-img">
+                    <span class="icon"><i class="fas fa-search"></i></span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
 
         </div><!-- /gallery -->
       </div><!-- /container -->
