--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
               <div class="overlay-info v-middle">
                 <h5 class="sub-heading">• Eyez <br> Back-end Development </h5>
                 <div class="icons">
-                  <a href="http://mmgulf.com/november19/eyez/demo/">
+                  <a href="http://eyez.com.eg/">
                     <span class="icon"><i class="fas fa-link"></i></span>
                   </a>
                   <a href="img/portfolio/8.png" class="popup-img">
