--- a/index.html
+++ b/index.html
@@ -201,15 +201,20 @@
                         Back-End Developer( Laravel Framework ) at Multi-Mega
                     </p>
                     <br>
-                    <p style="color: white">
+                  <!-- <p style="color: white">
                         • From 1/2019 to 9/2019<br>
+                        Back-End Developer( Laravel Framework ) at Be Group
+                    </p> -->
+                    <p style="color: white">
+                        • From 1/2016 to 9/2019<br>
                         Back-End Developer( Laravel Framework ) at Be Group
                     </p>
                     <br>
-                    <p style="color: white">
+                  <!-- <p style="color: white">
                         • From 10/2018 to 1/2019<br>
                         PHP developer Training at Be group.
-                    </p>
+                    </p> -->
+                    
                     <br>
                     <p style="color: white">•	From 1/2015 to 7/2015<br>
                         ADF developer ( Java ) AT Smart Development
@@ -222,7 +227,7 @@
     </div><!-- /container -->
 </div>
 <!-- ===== End Counter ===== -->
-
+<!-- -->
     <!-- ===== Start Portfolio ===== -->
     <section class="portfolio section-padding text-center" data-scroll-index="3">
       <div class="container">
@@ -230,7 +235,8 @@
         <!-- Section Heading  -->
         <div class="section-head wow zoomIn" data-wow-offset="200">
           <h3>Portfolio</h3>
-          <p>Experince 1 year as Back-End Developer  </p>
+          <!-- <p>Experince 1 year as Back-End Developer  </p> -->
+          
 
         </div>
 
